force-app/main/default/objects/Cobro__c/fields/codigo_cliente__c.field-meta.xml
<CustomField>
    <fullName>codigo_cliente__c</fullName>
    <label>Código de cliente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>