force-app/main/default/objects/Cobro__c/fields/Codigo_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Empresa__c</fullName>
    <label>Código de empresa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>