force-app/main/default/objects/Cobro__c/fields/Fecha_Cobro__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cobro__c</fullName>
    <label>Fecha de cobro</label>
    <type>Date</type>
</CustomField>