force-app/main/default/objects/Cobro__c/fields/Importe_cobrado__c.field-meta.xml
<CustomField>
    <fullName>Importe_cobrado__c</fullName>
    <label>Importe cobrado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>