force-app/main/default/objects/Cobro__c/fields/nombre_cliente__c.field-meta.xml
<CustomField>
    <fullName>nombre_cliente__c</fullName>
    <label>Nombre de cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>