force-app/main/default/objects/Cobro__c/fields/numero_serie__c.field-meta.xml
<CustomField>
    <fullName>numero_serie__c</fullName>
    <label>Número de serie</label>
    <length>50</length>
    <type>Text</type>
</CustomField>