force-app/main/default/objects/Cobro__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>PedidoDeCompra__c</referenceTo>
    <relationshipLabel>Cobros</relationshipLabel>
    <relationshipName>Cobros</relationshipName>
    <type>Lookup</type>
</CustomField>